--- a/index.html
+++ b/index.html
@@ -74,11 +74,15 @@
               <span class="author-block"><sup>3</sup>HKU</span>
             </div>
 
+            <sup>*</sup>Equal contribution.
+            <sup>&dagger;</sup>sup>Equal contribution.
+
             <div class="column has-text-centered">
               <div class="publication-links">
                 <!-- PDF Link. -->
                 <span class="link-block">
-                  <a href="./4D_Content_Generation_using_Multiview_Diffusion.pdf" class="external-link button is-normal is-rounded is-dark">
+                  <a href="./4D_Content_Generation_using_Multiview_Diffusion.pdf"
+                    class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                     </span>
@@ -96,7 +100,8 @@
                 </span>
                 <!-- Code Link. -->
                 <span class="link-block">
-                  <a href="https://github.com/JudgementH/MVTokenFlow" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://github.com/JudgementH/MVTokenFlow"
+                    class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
