--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span>Code</span>
+                    <span>Code(Coming)</span>
                   </a>
                 </span>
 
