--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
 
             <sup>*</sup>Equal contribution.
-            <sup>&dagger;</sup>sup>Equal contribution.
+            <sup>&dagger;</sup>Equal contribution.
 
             <div class="column has-text-centered">
               <div class="publication-links">
@@ -100,12 +100,12 @@
                 </span>
                 <!-- Code Link. -->
                 <span class="link-block">
-                  <a href="https://github.com/JudgementH/MVTokenFlow"
+                  <a href=""
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span>Code(Coming)</span>
+                    <span>Code (Coming soon)</span>
                   </a>
                 </span>
 
