--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
 
             <sup>*</sup>Equal contribution.
-            <sup>&dagger;</sup>Equal contribution.
+            <sup>&dagger;</sup>Corresponding author.
 
             <div class="column has-text-centered">
               <div class="publication-links">
