--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </span>
                 <!-- arXiv Link. -->
                 <span class="link-block">
-                  <a href="" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://arxiv.org/abs/2502.11697" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
                     </span>
@@ -100,7 +100,7 @@
                 </span>
                 <!-- Code Link. -->
                 <span class="link-block">
-                  <a href=""
+                  <a href="https://github.com/SooLab/MVTokenFlow"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
